--- a/PHA completeness comparison.ipynb
+++ b/PHA completeness comparison.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -94,50 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>metadata</th>\n",
-       "      <th>minion_1016</th>\n",
-       "      <th>astro_lsst_01_1016</th>\n",
-       "      <th>astro_lsst_01_1015</th>\n",
-       "      <th>astro_lsst_01_1017</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>PHA 3 pairs in 15 nights yr 10</td>\n",
-       "      <td>72.286809</td>\n",
-       "      <td>72.875499</td>\n",
-       "      <td>71.067906</td>\n",
-       "      <td>74.235775</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         metadata  minion_1016  astro_lsst_01_1016  \\\n",
-       "7  PHA 3 pairs in 15 nights yr 10    72.286809           72.875499   \n",
-       "\n",
-       "   astro_lsst_01_1015  astro_lsst_01_1017  \n",
-       "7           71.067906           74.235775  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -180,56 +141,17 @@
    ],
    "source": [
     "match = '3 pairs in 15 nights yr 10'\n",
-    "display(df[df.metadata.str.contains(match)])\n",
+    "#display(df[df.metadata.str.contains(match)])\n",
     "display(df_newsky[df_newsky.metadata.str.contains(match)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>metadata</th>\n",
-       "      <th>minion_1016</th>\n",
-       "      <th>astro_lsst_01_1016</th>\n",
-       "      <th>astro_lsst_01_1015</th>\n",
-       "      <th>astro_lsst_01_1017</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>141</th>\n",
-       "      <td>PHA 3 pairs in 15 nights yr 12</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>77.141445</td>\n",
-       "      <td>74.898243</td>\n",
-       "      <td>77.777113</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           metadata  minion_1016  astro_lsst_01_1016  \\\n",
-       "141  PHA 3 pairs in 15 nights yr 12          NaN           77.141445   \n",
-       "\n",
-       "     astro_lsst_01_1015  astro_lsst_01_1017  \n",
-       "141           74.898243           77.777113  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -268,60 +190,35 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "match = '3 pairs in 15 nights yr 12'\n",
-    "display(df[df.metadata.str.contains(match)])\n",
-    "display(df_newsky[df_newsky.metadata.str.contains(match)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
+    },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>metadata</th>\n",
-       "      <th>minion_1016</th>\n",
-       "      <th>astro_lsst_01_1016</th>\n",
-       "      <th>astro_lsst_01_1015</th>\n",
-       "      <th>astro_lsst_01_1017</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>159</th>\n",
-       "      <td>PHA 3 pairs in 30 nights yr 12</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>80.036364</td>\n",
-       "      <td>79.297031</td>\n",
-       "      <td>80.669212</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                           metadata  minion_1016  astro_lsst_01_1016  \\\n",
-       "159  PHA 3 pairs in 30 nights yr 12          NaN           80.036364   \n",
-       "\n",
-       "     astro_lsst_01_1015  astro_lsst_01_1017  \n",
-       "159           79.297031           80.669212  "
+       "array([[        nan,  4.30020787,  3.91812676,  3.66120958]])"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "cols = ['minion_1016', 'astro_lsst_01_1016', 'astro_lsst_01_1015', 'astro_lsst_01_1017']\n",
+    "matchprev = '3 pairs in 15 nights yr 10'\n",
+    "\n",
+    "match = '3 pairs in 15 nights yr 12'\n",
+    "#display(df[df.metadata.str.contains(match)])\n",
+    "display(df_newsky[df_newsky.metadata.str.contains(match)])\n",
+    "display(df_newsky[df_newsky.metadata.str.contains(match)][cols].as_matrix() - \n",
+    "        df_newsky[df_newsky.metadata.str.contains(matchprev)][cols].as_matrix())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -360,60 +257,33 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "match = '3 pairs in 30 nights yr 12'\n",
-    "display(df[df.metadata.str.contains(match)])\n",
-    "display(df_newsky[df_newsky.metadata.str.contains(match)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
+    },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>metadata</th>\n",
-       "      <th>minion_1016</th>\n",
-       "      <th>astro_lsst_01_1016</th>\n",
-       "      <th>astro_lsst_01_1015</th>\n",
-       "      <th>astro_lsst_01_1017</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>153</th>\n",
-       "      <td>PHA 3 pairs in 30 nights trailing loss yr 12</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>80.490376</td>\n",
-       "      <td>81.097773</td>\n",
-       "      <td>82.10845</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                         metadata  minion_1016  \\\n",
-       "153  PHA 3 pairs in 30 nights trailing loss yr 12          NaN   \n",
-       "\n",
-       "     astro_lsst_01_1016  astro_lsst_01_1015  astro_lsst_01_1017  \n",
-       "153           80.490376           81.097773            82.10845  "
+       "array([[        nan,  1.70783311,  3.41655269,  2.58587001]])"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "matchprev = match\n",
+    "match = '3 pairs in 30 nights yr 12'\n",
+    "#display(df[df.metadata.str.contains(match)])\n",
+    "display(df_newsky[df_newsky.metadata.str.contains(match)])\n",
+    "display(df_newsky[df_newsky.metadata.str.contains(match)][cols].as_matrix() - \n",
+    "        df_newsky[df_newsky.metadata.str.contains(matchprev)][cols].as_matrix())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -452,60 +322,33 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "match = '3 pairs in 30 nights trailing loss yr 12'\n",
-    "display(df[df.metadata.str.contains(match)])\n",
-    "display(df_newsky[df_newsky.metadata.str.contains(match)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
+    },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>metadata</th>\n",
-       "      <th>minion_1016</th>\n",
-       "      <th>astro_lsst_01_1016</th>\n",
-       "      <th>astro_lsst_01_1015</th>\n",
-       "      <th>astro_lsst_01_1017</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>156</th>\n",
-       "      <td>PHA 3 pairs in 30 nights trailing loss, SNR=4 ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>83.064246</td>\n",
-       "      <td>83.952085</td>\n",
-       "      <td>84.476381</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                              metadata  minion_1016  \\\n",
-       "156  PHA 3 pairs in 30 nights trailing loss, SNR=4 ...          NaN   \n",
-       "\n",
-       "     astro_lsst_01_1016  astro_lsst_01_1015  astro_lsst_01_1017  \n",
-       "156           83.064246           83.952085           84.476381  "
+       "array([[        nan,  0.64523706,  1.92015785,  1.4577779 ]])"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "matchprev = match\n",
+    "match = '3 pairs in 30 nights trailing loss yr 12'\n",
+    "#display(df[df.metadata.str.contains(match)])\n",
+    "display(df_newsky[df_newsky.metadata.str.contains(match)])\n",
+    "display(df_newsky[df_newsky.metadata.str.contains(match)][cols].as_matrix() - \n",
+    "        df_newsky[df_newsky.metadata.str.contains(matchprev)][cols].as_matrix())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -544,12 +387,24 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[        nan,  2.27528972,  2.76745267,  2.0666213 ]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "matchprev = match\n",
     "match = '3 pairs in 30 nights trailing loss, SNR=4 yr 12'\n",
-    "display(df[df.metadata.str.contains(match)])\n",
-    "display(df_newsky[df_newsky.metadata.str.contains(match)])"
+    "#display(df[df.metadata.str.contains(match)])\n",
+    "display(df_newsky[df_newsky.metadata.str.contains(match)])\n",
+    "display(df_newsky[df_newsky.metadata.str.contains(match)][cols].as_matrix() - \n",
+    "        df_newsky[df_newsky.metadata.str.contains(matchprev)][cols].as_matrix())"
    ]
   },
   {
