Swapped back to SSM objects

--- a/GalSim Images.ipynb
+++ b/GalSim Images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,24 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lynnej/lsstsw/stack/DarwinX86/sims_catalogs/2.3.5.sims.rc1/python/lsst/sims/catalogs/db/dbConnection.py:508: UserWarning: Duplicate object type id 25 specified: \n",
-      "Output object ids may not be unique.\n",
-      "This may not be a problem if you do not want globally unique id values\n",
-      "  'want globally unique id values')\n",
-      "/Users/lynnej/lsstsw/stack/DarwinX86/sims_catalogs/2.3.5.sims.rc1/python/lsst/sims/catalogs/db/dbConnection.py:508: UserWarning: Duplicate object type id 40 specified: \n",
-      "Output object ids may not be unique.\n",
-      "This may not be a problem if you do not want globally unique id values\n",
-      "  'want globally unique id values')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from lsst.sims.utils import ObservationMetaData\n",
     "from lsst.sims.catUtils.utils import ObservationMetaDataGenerator"
@@ -52,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,17 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.081626 24.5 59782.98551 248.506176989 -35.9013062598 r 151038\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "night = 203\n",
     "query = 'select obsHistId, min(expMJD) from summary where night=%d and filter=\"r\"' %(night)\n",
@@ -110,23 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: ErfaWarning: ERFA function \"taiutc\" yielded 1 of \"dubious year (Note 4)\" [astropy._erfa.core]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ssmObj = catUtils.baseCatalogModels.SolarSystemObj()\n",
     "#cat = NoisyCatalog(ssmObj, obs)\n",
-    "#cat = galsimInterface.GalSimSSM(ssmObj, obs_metadata=obs)\n",
-    "starObj = catUtils.baseCatalogModels.StarObj()\n",
-    "cat = galsimInterface.GalSimStars(starObj, obs_metadata=obs)\n",
+    "cat = galsimInterface.GalSimSSM(ssmObj, obs_metadata=obs)\n",
+    "#starObj = catUtils.baseCatalogModels.StarObj()\n",
+    "#cat = galsimInterface.GalSimStars(starObj, obs_metadata=obs)\n",
     "cat.camera = LsstSimMapper().camera\n",
     "cat.allowed_chips = ['R:1,1 S:1,1', 'R:1,1 S:0,0']"
    ]
@@ -137,25 +106,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cat.setPSF(galsimInterface.Kolmogorov_and_Gaussian_PSF())\n",
-    "cat.setPSF(galsimInterface.DoubleGaussianPSF())\n",
+    "cat.setPSF(galsimInterface.Kolmogorov_and_Gaussian_PSF())\n",
+    "#cat.setPSF(galsimInterface.DoubleGaussianPSF())\n",
     "cat.write_catalog('ssm_test_catalog.txt')\n",
     "cat.write_images(nameRoot='ssmImage')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "41119.9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import lsst.afw.image as afwImage\n",
     "im = afwImage.ImageF('ssmImage_R_1_1_S_0_0_r.fits').getArray()\n",
