--- a/GalSim Images.ipynb
+++ b/GalSim Images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,9 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lynnej/lsstsw/stack/DarwinX86/sims_catalogs/2.3.5.sims.rc1/python/lsst/sims/catalogs/db/dbConnection.py:508: UserWarning: Duplicate object type id 25 specified: \n",
+      "Output object ids may not be unique.\n",
+      "This may not be a problem if you do not want globally unique id values\n",
+      "  'want globally unique id values')\n",
+      "/Users/lynnej/lsstsw/stack/DarwinX86/sims_catalogs/2.3.5.sims.rc1/python/lsst/sims/catalogs/db/dbConnection.py:508: UserWarning: Duplicate object type id 40 specified: \n",
+      "Output object ids may not be unique.\n",
+      "This may not be a problem if you do not want globally unique id values\n",
+      "  'want globally unique id values')\n"
+     ]
+    }
+   ],
    "source": [
     "from lsst.sims.utils import ObservationMetaData\n",
     "from lsst.sims.catUtils.utils import ObservationMetaDataGenerator"
@@ -37,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.081626 24.5 59782.98551 248.506176989 -35.9013062598 r 151038\n"
+     ]
+    }
+   ],
    "source": [
     "night = 203\n",
     "query = 'select obsHistId, min(expMJD) from summary where night=%d and filter=\"r\"' %(night)\n",
@@ -87,9 +110,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: ErfaWarning: ERFA function \"taiutc\" yielded 1 of \"dubious year (Note 4)\" [astropy._erfa.core]\n"
+     ]
+    }
+   ],
    "source": [
     "ssmObj = catUtils.baseCatalogModels.SolarSystemObj()\n",
     "#cat = NoisyCatalog(ssmObj, obs)\n",
@@ -102,9 +133,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ssmImage_R_1_1_S_1_1_r.fits', 'ssmImage_R_1_1_S_0_0_r.fits']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cat.setPSF(galsimInterface.Kolmogorov_and_Gaussian_PSF())\n",
     "#cat.setPSF(galsimInterface.DoubleGaussianPSF())\n",
@@ -114,9 +156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40808.7\n"
+     ]
+    }
+   ],
    "source": [
     "import lsst.afw.image as afwImage\n",
     "im = afwImage.ImageF('ssmImage_R_1_1_S_0_0_r.fits').getArray()\n",
@@ -126,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,9 +192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: ErfaWarning: ERFA function \"taiutc\" yielded 1 of \"dubious year (Note 4)\" [astropy._erfa.core]\n"
+     ]
+    }
+   ],
    "source": [
     "cc = ic(ssmObj, obs)\n",
     "cc.write_catalog('testcat.txt')"
