--- a/Asteroid Colors.ipynb
+++ b/Asteroid Colors.ipynb
@@ -356,84 +356,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name \t V-J \t  V-H  \t  V-K  \t  V-g  \t  V-r  \t  V-i \t  V-z  \t V-y\n",
-      "Sv \t0.661 \t0.539 \t0.066 \t-0.209 \t0.261 \t0.486 \t0.420 \t0.455\n",
-      "Sa \t0.358 \t0.571 \t0.214 \t-0.242 \t0.296 \t0.462 \t0.328 \t0.275\n",
-      "Sq \t0.439 \t0.429 \t-0.010 \t-0.206 \t0.250 \t0.416 \t0.341 \t0.320\n",
-      "Sr \t0.527 \t0.443 \t-0.024 \t-0.215 \t0.258 \t0.435 \t0.336 \t0.350\n",
-      "Xe \t0.431 \t0.322 \t-0.084 \t-0.190 \t0.233 \t0.399 \t0.414 \t0.439\n",
-      "K \t0.374 \t0.312 \t-0.108 \t-0.191 \t0.234 \t0.403 \t0.380 \t0.367\n",
-      "Cgh \t0.336 \t0.239 \t-0.175 \t-0.168 \t0.177 \t0.277 \t0.305 \t0.331\n",
-      "L \t0.520 \t0.407 \t-0.054 \t-0.213 \t0.265 \t0.472 \t0.484 \t0.508\n",
-      "Xc \t0.394 \t0.290 \t-0.091 \t-0.169 \t0.201 \t0.357 \t0.386 \t0.409\n",
-      "Ch \t0.311 \t0.208 \t-0.197 \t-0.148 \t0.161 \t0.267 \t0.295 \t0.318\n",
-      "O \t0.161 \t0.208 \t-0.382 \t-0.171 \t0.198 \t0.284 \t0.059 \t-0.088\n",
-      "X \t0.482 \t0.430 \t0.097 \t-0.161 \t0.196 \t0.355 \t0.392 \t0.436\n",
-      "C \t0.264 \t0.184 \t-0.148 \t-0.149 \t0.177 \t0.290 \t0.295 \t0.300\n",
-      "T \t0.582 \t0.525 \t0.173 \t-0.179 \t0.224 \t0.421 \t0.481 \t0.539\n",
-      "Cg \t0.346 \t0.254 \t-0.134 \t-0.187 \t0.206 \t0.319 \t0.325 \t0.347\n",
-      "B \t0.121 \t-0.068 \t-0.527 \t-0.146 \t0.169 \t0.258 \t0.234 \t0.215\n",
-      "V \t0.683 \t0.384 \t-0.162 \t-0.229 \t0.282 \t0.437 \t0.116 \t0.119\n",
-      "A \t0.521 \t0.912 \t0.534 \t-0.267 \t0.324 \t0.545 \t0.468 \t0.385\n",
-      "R \t0.522 \t0.499 \t0.092 \t-0.228 \t0.283 \t0.457 \t0.253 \t0.226\n",
-      "Xk \t0.412 \t0.314 \t-0.081 \t-0.164 \t0.203 \t0.354 \t0.368 \t0.397\n",
-      "D \t0.775 \t0.794 \t0.492 \t-0.188 \t0.240 \t0.464 \t0.554 \t0.646\n",
-      "S \t0.525 \t0.447 \t-0.003 \t-0.211 \t0.259 \t0.456 \t0.401 \t0.415\n",
-      "Q \t0.323 \t0.330 \t-0.106 \t-0.205 \t0.244 \t0.383 \t0.252 \t0.192\n",
-      "Cb \t0.316 \t0.235 \t-0.106 \t-0.133 \t0.165 \t0.291 \t0.310 \t0.326\n"
+      "Name \t  V-g  \t  V-r  \t  V-i \t  V-z  \t V-y \t V-J \t  V-H  \t  V-K\n",
+      "Sv \t-0.209 \t0.261 \t0.486 \t0.420 \t0.455\t0.661 \t0.539 \t0.066\n",
+      "Sa \t-0.242 \t0.296 \t0.462 \t0.328 \t0.275\t0.358 \t0.571 \t0.214\n",
+      "Sq \t-0.206 \t0.250 \t0.416 \t0.341 \t0.320\t0.439 \t0.429 \t-0.010\n",
+      "Sr \t-0.215 \t0.258 \t0.435 \t0.336 \t0.350\t0.527 \t0.443 \t-0.024\n",
+      "Xe \t-0.190 \t0.233 \t0.399 \t0.414 \t0.439\t0.431 \t0.322 \t-0.084\n",
+      "K \t-0.191 \t0.234 \t0.403 \t0.380 \t0.367\t0.374 \t0.312 \t-0.108\n",
+      "Cgh \t-0.168 \t0.177 \t0.277 \t0.305 \t0.331\t0.336 \t0.239 \t-0.175\n",
+      "L \t-0.213 \t0.265 \t0.472 \t0.484 \t0.508\t0.520 \t0.407 \t-0.054\n",
+      "Xc \t-0.169 \t0.201 \t0.357 \t0.386 \t0.409\t0.394 \t0.290 \t-0.091\n",
+      "Ch \t-0.148 \t0.161 \t0.267 \t0.295 \t0.318\t0.311 \t0.208 \t-0.197\n",
+      "O \t-0.171 \t0.198 \t0.284 \t0.059 \t-0.088\t0.161 \t0.208 \t-0.382\n",
+      "X \t-0.161 \t0.196 \t0.355 \t0.392 \t0.436\t0.482 \t0.430 \t0.097\n",
+      "C \t-0.149 \t0.177 \t0.290 \t0.295 \t0.300\t0.264 \t0.184 \t-0.148\n",
+      "T \t-0.179 \t0.224 \t0.421 \t0.481 \t0.539\t0.582 \t0.525 \t0.173\n",
+      "Cg \t-0.187 \t0.206 \t0.319 \t0.325 \t0.347\t0.346 \t0.254 \t-0.134\n",
+      "B \t-0.146 \t0.169 \t0.258 \t0.234 \t0.215\t0.121 \t-0.068 \t-0.527\n",
+      "V \t-0.229 \t0.282 \t0.437 \t0.116 \t0.119\t0.683 \t0.384 \t-0.162\n",
+      "A \t-0.267 \t0.324 \t0.545 \t0.468 \t0.385\t0.521 \t0.912 \t0.534\n",
+      "R \t-0.228 \t0.283 \t0.457 \t0.253 \t0.226\t0.522 \t0.499 \t0.092\n",
+      "Xk \t-0.164 \t0.203 \t0.354 \t0.368 \t0.397\t0.412 \t0.314 \t-0.081\n",
+      "D \t-0.188 \t0.240 \t0.464 \t0.554 \t0.646\t0.775 \t0.794 \t0.492\n",
+      "S \t-0.211 \t0.259 \t0.456 \t0.401 \t0.415\t0.525 \t0.447 \t-0.003\n",
+      "Q \t-0.205 \t0.244 \t0.383 \t0.252 \t0.192\t0.323 \t0.330 \t-0.106\n",
+      "Cb \t-0.133 \t0.165 \t0.291 \t0.310 \t0.326\t0.316 \t0.235 \t-0.106\n"
      ]
     }
    ],
    "source": [
-    "print('Name \\t V-J \\t  V-H  \\t  V-K  \\t  V-g  \\t  V-r  \\t  V-i \\t  V-z  \\t V-y')\n",
+    "print('Name \\t  V-g  \\t  V-r  \\t  V-i \\t  V-z  \\t V-y \\t V-J \\t  V-H  \\t  V-K')\n",
     "for a in asts:\n",
-    "    vj = vmags[a] - jmags[a]\n",
-    "    vh = vmags[a] - hmags[a]\n",
-    "    vk = vmags[a] - kmags[a]\n",
-    "    writestring = '%s \\t%.3f \\t%.3f \\t%.3f' % (a, vj, vh, vk)\n",
+    "    writestring = '%s' % a\n",
     "    for f in lsst:\n",
     "        vX = vmags[a] - lsstmags[f][a]\n",
     "        writestring += ' \\t%.3f' % (vX)\n",
+    "    vj = vmags[a] - jmags[a]\n",
+    "    vh = vmags[a] - hmags[a]\n",
+    "    vk = vmags[a] - kmags[a]\n",
+    "    writestring += '\\t%.3f \\t%.3f \\t%.3f' % (vj, vh, vk)\n",
     "    print(writestring)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name \t V-J \t  V-H  \t  V-K  \t  V-g  \t  V-r  \t  V-i \t  V-z  \t V-y\n",
-      "B \t0.121 \t-0.068 \t-0.527 \t-0.146 \t0.169 \t0.258 \t0.234 \t0.215\n",
-      "C \t0.264 \t0.184 \t-0.148 \t-0.149 \t0.177 \t0.290 \t0.295 \t0.300\n",
-      "Cg \t0.346 \t0.254 \t-0.134 \t-0.187 \t0.206 \t0.319 \t0.325 \t0.347\n",
-      "Cgh \t0.336 \t0.239 \t-0.175 \t-0.168 \t0.177 \t0.277 \t0.305 \t0.331\n",
-      "Ch \t0.311 \t0.208 \t-0.197 \t-0.148 \t0.161 \t0.267 \t0.295 \t0.318\n",
-      "Cb \t0.316 \t0.235 \t-0.106 \t-0.133 \t0.165 \t0.291 \t0.310 \t0.326\n",
-      "D \t0.775 \t0.794 \t0.492 \t-0.188 \t0.240 \t0.464 \t0.554 \t0.646\n"
+      "Name \t  V-g  \t  V-r  \t  V-i \t  V-z  \t V-y \t V-J \t  V-H  \t  V-K\n",
+      "B \t-0.146 \t0.169 \t0.258 \t0.234 \t0.215\t0.121 \t-0.068 \t-0.527\n",
+      "C \t-0.149 \t0.177 \t0.290 \t0.295 \t0.300\t0.264 \t0.184 \t-0.148\n",
+      "Cg \t-0.187 \t0.206 \t0.319 \t0.325 \t0.347\t0.346 \t0.254 \t-0.134\n",
+      "Cgh \t-0.168 \t0.177 \t0.277 \t0.305 \t0.331\t0.336 \t0.239 \t-0.175\n",
+      "Ch \t-0.148 \t0.161 \t0.267 \t0.295 \t0.318\t0.311 \t0.208 \t-0.197\n",
+      "Cb \t-0.133 \t0.165 \t0.291 \t0.310 \t0.326\t0.316 \t0.235 \t-0.106\n",
+      "D \t-0.188 \t0.240 \t0.464 \t0.554 \t0.646\t0.775 \t0.794 \t0.492\n"
      ]
     }
    ],
    "source": [
-    "print('Name \\t V-J \\t  V-H  \\t  V-K  \\t  V-g  \\t  V-r  \\t  V-i \\t  V-z  \\t V-y')\n",
+    "print('Name \\t  V-g  \\t  V-r  \\t  V-i \\t  V-z  \\t V-y \\t V-J \\t  V-H  \\t  V-K')\n",
     "for a in ['B', 'C', 'Cg', 'Cgh', 'Ch', 'Cb', 'D']:\n",
-    "    vj = vmags[a] - jmags[a]\n",
-    "    vh = vmags[a] - hmags[a]\n",
-    "    vk = vmags[a] - kmags[a]\n",
-    "    writestring = '%s \\t%.3f \\t%.3f \\t%.3f' % (a, vj, vh, vk)\n",
+    "    writestring = '%s' % a\n",
     "    for f in lsst:\n",
     "        vX = vmags[a] - lsstmags[f][a]\n",
     "        writestring += ' \\t%.3f' % (vX)\n",
+    "    vj = vmags[a] - jmags[a]\n",
+    "    vh = vmags[a] - hmags[a]\n",
+    "    vk = vmags[a] - kmags[a]\n",
+    "    writestring += '\\t%.3f \\t%.3f \\t%.3f' % (vj, vh, vk)\n",
     "    print(writestring)"
    ]
   },
