Update for call methods

--- a/SeeingModel Demo.ipynb
+++ b/SeeingModel Demo.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "# Set up and configure the SeeingModel. (note that configure with no kwarg will just use defaults, as above)\n",
-    "seeingModel = sm.SeeingModel(conf)"
+    "seeingModel = sm.SeeingModel(conf)   #  equivalent to seeingModel = sm.SeeingModel() when using defaults"
    ]
   },
   {
@@ -78,7 +78,8 @@
        "             ('filter_effwavelens',\n",
        "              [367.06988658, 482.68517118, 622.32403587, 754.59752265, 869.09018708, 971.02780848]),\n",
        "             ('efd_columns', ['FWHM_500']),\n",
-       "             ('efd_delta_time', 0.0)])"
+       "             ('efd_delta_time', 0.0),\n",
+       "             ('map_columns', ['airmass'])])"
       ]
      },
      "execution_count": 5,
@@ -93,26 +94,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['FWHM_500'] 0.0\n"
+      "['FWHM_500'] 0.0\n",
+      "['airmass']\n"
      ]
     }
    ],
    "source": [
     "# Find the values the SeeingModel wants from the EFD. \n",
-    "cols, deltaT = seeingModel.efd_requirements()\n",
-    "print(cols, deltaT)"
+    "cols, deltaT = seeingModel.efd_requirements\n",
+    "print(cols, deltaT)\n",
+    "# Find the columns the SeeingModel wants in its input map (over which to calculate the seeing values)\n",
+    "print(seeingModel.map_requirements)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,12 +141,12 @@
     "times = np.arange(0, t_end + t_step/2, t_step)\n",
     "fwhm_500 = np.zeros(len(times), float)\n",
     "for i, t_now in enumerate(times):\n",
-    "    fwhm_500[i] = seeingData.fwhm500_at_time(t_now)"
+    "    fwhm_500[i] = seeingData(t_now)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +155,7 @@
        "Text(0, 0.5, 'FWHM_500')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -177,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +190,7 @@
        "Text(0, 0.5, 'Airmass')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -231,14 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "155 µs ± 6.95 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "151 µs ± 1.87 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -250,14 +254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "372 µs ± 4.04 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "392 µs ± 10.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -269,14 +273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "62.6 µs ± 2.07 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "62.8 µs ± 620 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -289,30 +293,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "airmass = np.zeros(len(alt), float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "55.9 µs ± 388 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "# calculation with mask, using preallocated 'airmass' array\n",
-    "airmass[visible] = 1./np.cos(np.pi/2. - alt[visible])"
    ]
   },
   {
@@ -324,32 +309,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.702247977256775\n"
-     ]
-    }
-   ],
-   "source": [
-    "fwhm_500 = seeingData.fwhm500_at_time(t_now)\n",
-    "print(fwhm_500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "605 µs ± 3.03 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "56.5 µs ± 974 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
-    "# Check time to calculate seeing. No mask. \n",
-    "fwhm_eff, fwhm_geom = seeingModel.seeing_at_airmass(fwhm_500, airmass)"
+    "# calculation with mask, using preallocated 'airmass' array\n",
+    "airmass[visible] = 1./np.cos(np.pi/2. - alt[visible])"
    ]
   },
   {
@@ -361,17 +328,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "522 µs ± 3.27 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "0.702247977256775\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
-    "# Check time to calculate seeing. WITH mask.\n",
-    "fwhm_eff = np.zeros((len(seeingModel.filter_list), len(airmass)), float)\n",
-    "fwhm_geom = np.zeros((len(seeingModel.filter_list), len(airmass)), float)\n",
-    "#print(fwhm_eff[:, visible[0]].shape)\n",
-    "fwhm_eff[:, visible[0]], fwhm_geom[:, visible[0]] = seeingModel.seeing_at_airmass(fwhm_500, airmass[visible])"
+    "fwhm_500 = seeingData(t_now)\n",
+    "print(fwhm_500)"
    ]
   },
   {
@@ -380,9 +343,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# And then what about time, if you pre-allocate arrays?\n",
-    "fwhm_eff = np.zeros((len(seeingModel.filter_list), len(airmass)), float)\n",
-    "fwhm_geom = np.zeros((len(seeingModel.filter_list), len(airmass)), float)"
+    "# Put input telemetry and target map into dictionaries:\n",
+    "mapDict = {'airmass': airmass}\n",
+    "mapDictMask = {'airmass': airmass[visible]}\n",
+    "efdDict = {'FWHM_500': fwhm_500}"
    ]
   },
   {
@@ -394,18 +358,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "484 µs ± 4.95 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "627 µs ± 11.2 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
-    "fwhm_eff[:, visible[0]], fwhm_geom[:, visible[0]] = seeingModel.seeing_at_airmass(fwhm_500, airmass[visible])"
+    "# Check time to calculate seeing. No mask. \n",
+    "fwhm_eff, fwhm_geom = seeingModel(efdDict, mapDict)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "536 µs ± 17.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "# Check time to calculate seeing. WITH mask.\n",
+    "fwhm_eff = np.zeros((len(seeingModel.filter_list), len(airmass)), float)\n",
+    "fwhm_geom = np.zeros((len(seeingModel.filter_list), len(airmass)), float)\n",
+    "#print(fwhm_eff[:, visible[0]].shape)\n",
+    "fwhm_eff[:, visible[0]], fwhm_geom[:, visible[0]] = seeingModel(efdDict, mapDictMask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# And then what about time, if you pre-allocate arrays?\n",
+    "fwhm_eff = np.zeros((len(seeingModel.filter_list), len(airmass)), float)\n",
+    "fwhm_geom = np.zeros((len(seeingModel.filter_list), len(airmass)), float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "474 µs ± 3.91 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "fwhm_eff[:, visible[0]], fwhm_geom[:, visible[0]] = seeingModel(efdDict, mapDictMask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,13 +433,13 @@
     "fwhm_eff = np.zeros((len(seeingModel.filter_list), len(airmass)), float)\n",
     "fwhm_geom = np.zeros((len(seeingModel.filter_list), len(airmass)), float)\n",
     "for i, t_now in enumerate(times):\n",
-    "    fwhm_500[i] = seeingData.fwhm500_at_time(t_now)\n",
-    "    fwhm_eff[:, visible[0]], fwhm_geom[:, visible[0]] = seeingModel.seeing_at_airmass(fwhm_500[i], airmass[visible])"
+    "    fwhm_500[i] = seeingData(t_now)\n",
+    "    fwhm_eff[:, visible[0]], fwhm_geom[:, visible[0]] = seeingModel({'FWHM_500': fwhm_500[i]}, mapDictMask)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
